# CYD_clock

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/lvgl/src/core/: lv_refr.c
components/lvgl_esp32_drivers/: lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_driver.c  disp_driver.h  ili9341.c  ili9341.h  st7789.c  st7789.h  st7796s.c  st7796s.h
components/lvgl_esp32_drivers/lvgl_touch/: touch_driver.c  tp_spi.c  xpt2046.c  xpt2046.h
main/: CMakeLists.txt  app_data_service.c  app_data_service.h  main.c  settings_web_server.c  settings_web_server.h  smart_clock_app.c  smart_clock_app.h  wifi_settings.c  wifi_settings.h
main/fonts/: lv_font_korean_10.c  lv_font_korean_11.c  lv_font_korean_12.c  lv_font_korean_9.c
